--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "framer-motion": "^3.3.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.4.0",
     "react-intersection-observer": "^8.31.0",
     "react-notifications": "^1.7.4",
     "react-router-dom": "^5.2.0",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "4.0.2",
+    "scroll-into-view": "^1.16.2",
     "styled-components": "^5.2.1",
     "web-vitals": "^1.0.1"
   },
