--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "capture",
+  "homepage": "https://datumservices.ma/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -18,6 +19,7 @@
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "4.0.2",
     "scroll-into-view": "^1.16.2",
+    "serve-build": "^0.1.0",
     "styled-components": "^5.2.1",
     "web-vitals": "^1.0.1"
   },
